# scoliosis

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  Makefile  PUBLICATION_STATUS_FINAL.md  QUICKSTART_VALIDATION.md  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  SUBMISSION_INSTRUCTIONS.md  VALIDATION_SUMMARY.md  VALIDATION_TEST_DESIGN.md  conftest.py  pyproject.toml  requirements.txt  requirements_cloud.txt
data/: README.md  candidates_master.csv  clinical_cohort_targets.csv  datasets_registry.md  final_target_candidates.csv  species_parameters.csv
docs/: CONTRIBUTING.md  LICENSING.md  code_availability_section.md  key_claims_bullets.md  key_numbers_box.md  key_results_bullets.md  reproducibility.md
envs/: Dockerfile  README.md  environment.yml  requirements_snapshot_v0.2.0.txt
examples/: quickstart.ipynb  quickstart.py  skill-usage-examples.md
figures/: README.md  provenance.json
manuscript/: Makefile  README.md  Supplementary_Methods_Statistics.md  Supplementary_Statistics_Table.csv  check_latex_syntax.sh  comprehensive_latex_check.sh  cover_letter_spine_deformity.tex  enumitem.sty  fig_iec_equations.tex  fix_all_citations.sh  generated_methodology.txt  highlights.txt  highlights_spine_deformity.txt  main.tex  nature_submission_manuscript.md  nature_submission_manuscript.tex  nature_submission_v3.md  references.bib  scoliosis_framework.tex  supplementary.tex
scripts/: add_gravity_spine_candidates_v3.py  add_gravity_spine_candidates_v4.py  add_gravity_spine_candidates_v5.py  add_gravity_spine_candidates_v6.py  add_gravity_spine_candidates_v7.py  add_gravity_spine_candidates_v8.py  add_gravity_spine_candidates_v9.py  afcc_daily_refresh.py  benchmark_surface_metrics.py  bolt_biofold_analysis.py  check_candidates.py  experiment_anisotropy_rescue.py  experiment_cross_species_scaling.py  experiment_delayed_control.py  experiment_energy_deficit_window.py  experiment_energy_phase_diagram.py  experiment_lenke_classes.py  experiment_locomotor_resonance.py  experiment_optimization_failure.py  experiment_peristaltic_spine.py  experiment_phv_timing.py  experiment_protein_physics.py  experiment_sexual_dimorphism.py  experiment_spinal_jetlag.py  experiment_spinal_symphony.py  experiment_spine_sonification.py  fetch_longevity_structures.py  fetch_longevity_structures_yap1.py  finalize_metabolic_update.py  fix_table_data.py  force_update_theory.py  generate_autonomous_artifacts.sh  generate_autonomous_lenke_artifacts.sh  generate_figures_paperbanana.sh  generate_high_impact_artifacts.sh  generate_jules_autonomous_artifacts.sh  generate_jules_visuals.sh  (+49 more)
(+346 files in other folders)
